Closed Bug 707353 Opened 12 years ago Closed 11 years ago

[flash] soft keyboard doesn't appear

Categories

(Firefox for Android Graveyard :: General, defect, P2)

ARM
Android
defect

Tracking

(firefox14 verified, firefox15 verified, blocking-fennec1.0 +, fennec11+)

VERIFIED FIXED
Firefox 14
Tracking Status
firefox14 --- verified
firefox15 --- verified
blocking-fennec1.0 --- +
fennec 11+ ---

People

(Reporter: mluna, Assigned: cpeterson)

References

()

Details

(Keywords: flashplayer, Whiteboard: [MTD])

Attachments

(2 files, 1 obsolete file)

Web page or screen you were on when you saw the issue: http"://www.zasmakujegancji.pl

Steps to reproduce:
1. go to the above web page (it is flash entry to an alcohol advertising site, hence the requirement to enter your birth date)
2. tap the DD, to see blinking cursor
3. soft keyboard doesn't appear and hard keyboard doesn't work/no input

What you expected: expected soft keyboard to appear and to be able to input birth date with hard keyboard.

Crash report ID (if applicable):
Assignee: nobody → snorp
Priority: -- → P2
tracking-fennec: --- → 11+
blocking-fennec1.0: --- → +
Status: NEW → ASSIGNED
The attached patch makes the keyboard hide/show appropriately, but input doesn't work because we seem to send IME events instead of keyboard ones. Handing over to Chris, as he's already working on fixing this problem (AIUI).
Assignee: snorp → cpeterson
I'm stumped for now. Gecko's call to the Flash plugin's HandleEvent() returns 1, implying Flash accepted the key event, but nothing happens.
When sending key events to Flash, Fennec is not correctly initializing the ANPEvent's `keyCode` and `unichar` fields correctly.
btw, the stock browser does not send intermediate composition events to Flash. When composing a Japanese character in the stock browser, Flash displays no intermediate characters. When I commit the Japanese character, Flash then displays the final character correctly.
This bug is blocked by gfx bug 735864. Even when I send the correct key events to Flash, the page does not appear to update until I zoom in/out to force the page to redraw.
Depends on: 735864
Depends on: 721393
Depends on: 630576
No longer depends on: 721393
No longer depends on: 630576
Depends on: 742036
Status: ASSIGNED → NEW
Depends on: 687717
Comment on attachment 608701 [details] [diff] [review]
Implement ANPWindow::showKeyboard for Android plugins

Review of attachment 608701 [details] [diff] [review]:
-----------------------------------------------------------------

snorp, is this patch adequate as-is to implement ANPWindow::showKeyboard()? Is there anything you want to change before requesting a review?

::: widget/android/nsWindow.cpp
@@ +156,5 @@
>  static const double SWIPE_MAX_PINCH_DELTA_INCHES = 0.4;
>  static const double SWIPE_MIN_DISTANCE_INCHES = 0.6;
>  
> +nsWindow*
> +nsWindow::TopWindow()

Why does TopWindow() need to become a member function of nsWindow?
Implement ANPWindow::showKeyboard() for Android plugins.

patch v2 is simply a rebased version of snorp's unreviewed patch v1.
Attachment #608701 - Attachment is obsolete: true
Attachment #616680 - Flags: review?(blassey.bugs)
Status: NEW → ASSIGNED
Attachment #616680 - Flags: review?(blassey.bugs) → review?(snorp)
Comment on attachment 616680 [details] [diff] [review]
bug-707353-implement-showKeyboard-v2.patch

This looks exactly like my original patch, so I approve :)
Attachment #616680 - Flags: review?(snorp) → review+
Keywords: flashplayer
Blocks: 747492
https://hg.mozilla.org/mozilla-central/rev/b0eac121f619
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 14
Depends on: 749120
It seems that the page from comment #0 is not available anymore. However this issue seems to be fixed on the latest Nightly and Aurora builds. Going to http://activeden.net/item/flash-age-verification/24821 and tapping on DD field will trigger the VKB.

Closing bug as verified fixed on:

Firefox 15.0a1 (2012-05-29)
Firefox 14.0a2 (2012-05-29)

Device: Galaxy Nexus
OS: Android 4.0.2
Status: RESOLVED → VERIFIED
Product: Firefox for Android → Firefox for Android Graveyard
You need to log in before you can comment on or make changes to this bug.