Bug 707353 - Implement ANPWindow::showKeyboard() for Android plugins. r=snorp a=blocking-fennec

--HG--
extra : rebase_source : ca2da8fe9689fa702444cd6da7b4841d9ef12ec4